trunk/Archive2/9e/d69038c34f8368/output
main.cpp:77:9: error: use of undeclared identifier '_itoa_s'
        _itoa_s(value, buf, 10);
        ^
1 error generated.
